test: Move run-make tests into compiletest
Forcing them to be embedded in makefiles precludes being able to run them in
rustbuild, and adding them to compiletest gives us a great way to leverage
future enhancements to our "all encompassing test suite runner" as well as just
moving more things into Rust.

All tests are still Makefile-based in the sense that they rely on `make` being
available to run them, but there's no longer any Makefile-trickery to run them
and rustbuild can now run them out of the box as well.

--- a/src/test/run-make/unicode-input/Makefile
+++ b/src/test/run-make/unicode-input/Makefile
@@ -6,7 +6,7 @@
 
 # FIXME ignore windows
 ifndef IS_WINDOWS
-ifeq ($(RUST_BUILD_STAGE),1)
+ifeq ($(RUST_BUILD_STAGE),stage1)
 DOTEST=
 else
 DOTEST=dotest
